--- a/index.html
+++ b/index.html
@@ -64,7 +64,25 @@
                 Divas in Technology
             </div>
         </div>
-        <div class="row motto1-bg">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8" id="flower-motto">
+                From This STEM, A Flower Blooms
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5"></div>
+            <div class="col-md-2">
+                <img src="images/flowerDivider.png" id="flower-divider">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5"></div>
+            <div class="col-md-2">
+                <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">Learn More About Our Mission</a>
+            </div>
+        </div>
+        <!-- <div class="row motto1-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <p id="flower-motto">~ From This STEM, A Flower Blooms ~</p>
@@ -97,7 +115,64 @@
                 <a href="#arrow-link"><img src="images/downArrow.png" id="down-arrow"></a>
             </div>
         </div>
+        <div class="row break-pt" id="arrow-link"></div> -->
+
+        <!-- <div class="row upcoming-bg homepage-boxes"></div> -->
         <div class="row break-pt" id="arrow-link"></div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <div class="box">
+                    <p class="box-title">What We Do</p>
+                    <p class="box-paragraph">
+                        DTech works to provide young girls with invaluable technological skills and knowledge, empowering girls and thereby changing the future. We are proud to offer a wide array of technology programs for girls of all ages, ethnicities, and backgrounds.
+                    </p>
+                    <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">Learn More About Our Mission</a>
+                </div>
+            </div>
+        </div>
+        <div class="row break-pt" id="arrow-link"></div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <div class="box">
+                    <p class="box-title">Upcoming Programs</p>
+                    <p class="box-paragraph">
+                        Check out our upcoming programs!
+                    </p>
+                    <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">See All Upcoming Programs</a>
+                    <div class="row">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-3 upcoming-box">
+                            <p class="program-title">Introduction to Python</p>
+                            <p class="program-date">May 1</p>
+                            <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">See More Info</a>
+                        </div>
+                        <div class="col-md-3 upcoming-box">
+                            <p class="program-title">Introduction to Web Development</p>
+                            <p class="program-date">June 1</p>
+                            <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">See More Info</a>
+                        </div>
+                        <div class="col-md-3 upcoming-box">
+                            <p class="program-title">Introduction to Python</p>
+                            <p class="program-date">July 12 - July 22</p>
+                            <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">See More Info</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-3 upcoming-box">
+                            <p class="program-title">Introduction to Web Development</p>
+                            <p class="program-date">August 10</p>
+                            <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">See More Info</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row break-pt" id="arrow-link"></div>
+
+        <!-- <div class="row upcoming-bg homepage-boxes"></div>
         <div class="row upcoming-bg">
             <div class="col-md-2"></div>
             <div class="col-md-3 upcoming1-bg">
@@ -113,16 +188,18 @@
         <div class="row upcoming-bg">
             <div class="col-md-2"></div>
             <div class="col-md-4 program1-bg">
-                <p class="program-date">28 May</p>
-                <p class="program-title">Introduction to Python</p>
+                <p class="prog-date">28 May</p>
+                <p class="prog-title">Introduction to Python</p>
                 <a href="pages/upcomingPrograms.html#page-title"><img src="images/rightArrow.png" class="program-arrow"></a>
             </div>
             <div class="col-md-4 program2-bg">
-                <p class="program-date">27 June</p>
-                <p class="program-title">Introduction to Web Development</p>
+                <p class="prog-date">27 June</p>
+                <p class="prog-title">Introduction to Web Development</p>
                 <a href="pages/upcomingPrograms.html#page-title"><img src="images/rightArrow.png" class="program-arrow"></a>
             </div>
         </div>
+        <div class="row upcoming-bg homepage-boxes"></div> -->
+
 
         <!-- Contact Us -->
         <div class="row break-pt"></div>
