past programs page changes

--- a/index.html
+++ b/index.html
@@ -142,29 +142,25 @@
                     </p>
                     <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">See All Upcoming Programs</a>
                     <div class="row">
-                        <div class="col-md-1"></div>
+                        <!-- <div class="col-md-1"></div> -->
                         <div class="col-md-3 upcoming-box">
                             <p class="program-title">Introduction to Python</p>
                             <p class="program-date">May 1</p>
-                            <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">See More Info</a>
                         </div>
                         <div class="col-md-3 upcoming-box">
                             <p class="program-title">Introduction to Web Development</p>
                             <p class="program-date">June 1</p>
-                            <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">See More Info</a>
                         </div>
                         <div class="col-md-3 upcoming-box">
                             <p class="program-title">Introduction to Python</p>
                             <p class="program-date">July 12 - July 22</p>
-                            <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">See More Info</a>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-1"></div>
+                        <!-- <div class="col-md-1"></div> -->
                         <div class="col-md-3 upcoming-box">
                             <p class="program-title">Introduction to Web Development</p>
                             <p class="program-date">August 10</p>
-                            <a href="pages/mission.html" role="button" class="btn btn-dark" id="link-btn">See More Info</a>
                         </div>
                     </div>
                 </div>
