--- a/pages/pastPrograms.html
+++ b/pages/pastPrograms.html
@@ -64,13 +64,49 @@
                 PAST PROGRAMS
             </div>
         </div>
-        <div class="row main-bg">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
+                <div class="program-box">
+                    <p class="program-title">Intro to Web Development</p>
+                    <p class="program-subheading">Summer 2021 Program</p>
+                    <p class="program-subheading">Led by DTech, Sponsored by MSOE</p>
+                    <p class="program-description">
+                        In this 4-week virtual program, participants learned the skills necessary to create a simple website, which included the basics of HMTL, CSS, and JavaScript. Their final projects were based on their hobbies and interests. We were joined by a guest speaker, Megan Bruzan, the founder and lead developer at Milwaukee Website Designs.
+                    </p>
+                    <img src="../images/summer2021.png" class="pic">
+                    <a href="https://youtu.be/yjLoRWqiAEs" target="_blank" class="link">
+                        <button class="ceremony-btn">
+                            View Final Ceremony
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <div class="program-box">
+                    <p class="program-title">Intro to Web Development</p>
+                    <p class="program-subheading">Fall 2020 Program</p>
+                    <p class="program-subheading">Led by DTech, Sponsored by MSOE</p>
+                    <p class="program-description">
+                        In this 8-week virtual program, participants learned the skills necessary to create a simple website, which included the basics of HMTL, CSS, and JavaScript. Their final projects aimed to help or solve an issue they personally faced in the "new normal" (virtual environment). Two guest speakers appeared throughout the program: Rachel Duchesneau, a software developer at Northwestern Mutual, and Diane Schwarz, the CIO of Johnson Controls.
+                    </p>
+                    <img src="../images/fall2020.png" class="pic">
+                    <a href="https://youtu.be/LjZmXUKcI8c" target="_blank" class="link">
+                        <button class="ceremony-btn">
+                            View Final Ceremony
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="row main-bg">
             <div class="col-md-2"></div>
-            <div class="col-md-4 program-bg">
-                <p class="program-title">Intro to Web Development</p>
-                <p class="program-subheading">Summer 2021 Program</p>
-                <p class="program-subheading">Led by DTech, Sponsored by MSOE</p>
-                <p class="program-description">
+            <div class="col-md-4 prog-bg">
+                <p class="prog-title">Intro to Web Development</p>
+                <p class="prog-subheading">Summer 2021 Program</p>
+                <p class="prog-subheading">Led by DTech, Sponsored by MSOE</p>
+                <p class="prog-description">
                     In this 4-week virtual program, participants learned the skills necessary to create a simple website, which included the basics of HMTL, CSS, and JavaScript. Their final projects were based on their hobbies and interests. We were joined by a guest speaker, Megan Bruzan, the founder and lead developer at Milwaukee Website Designs.
                 </p>
             </div>
@@ -93,15 +129,15 @@
                     </button>
                 </a>
             </div>
-            <div class="col-md-4 program-bg">
-                <p class="program-title">Intro to Web Development</p>
-                <p class="program-subheading">Fall 2020 Program</p>
-                <p class="program-subheading">Led by DTech, Sponsored by MSOE</p>
-                <p class="program-description">
+            <div class="col-md-4 prog-bg">
+                <p class="prog-title">Intro to Web Development</p>
+                <p class="prog-subheading">Fall 2020 Program</p>
+                <p class="prog-subheading">Led by DTech, Sponsored by MSOE</p>
+                <p class="prog-description">
                     In this 8-week virtual program, participants learned the skills necessary to create a simple website, which included the basics of HMTL, CSS, and JavaScript. Their final projects aimed to help or solve an issue they personally faced in the "new normal" (virtual environment). Two guest speakers appeared throughout the program: Rachel Duchesneau, a software developer at Northwestern Mutual, and Diane Schwarz, the CIO of Johnson Controls.
                 </p>
             </div>
-        </div>
+        </div> -->
         
         <!-- Contact Us -->
         <div class="row break-pt"></div>
