upcoming programs page changes

--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -61,16 +61,19 @@
         <div class="row" style="margin-top: 100px;">
             <div class="col-md-2"></div>
             <div class="col-md-8" id="page-title">
-                UPCOMING PROGRAMS
+                <p>UPCOMING PROGRAMS</p>
+                <p class="page-subheading">View our upcoming programs and register today!</p>
+
             </div>
         </div>
-        <div class="row main-bg">
+        <!-- <div class="row main-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <p class="page-subheading">View our upcoming programs and register today!</p>
             </div>
-        </div>
-        <div class="row main-bg">
+        </div> -->
+        <!-- previous background class = main-bg -->
+        <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8 program-dropdown" id="program1">
                 <div class="row">
@@ -83,9 +86,9 @@
                 </div>
             </div>
         </div>
-        <div class="row main-bg" id="program1-info">
+        <div class="row" id="program1-info">
             <div class="col-md-2"></div>
-            <div class="col-md-8 program-bg">
+            <div class="col-md-8 program-box">
                 <p class="program-title">Intro to Coding, Python</p>
                 <p class="program-subheading">Spring 2022</p>
                 <p class="program-subheading">Led by DTech, In partnership with Journey House</p>
@@ -96,10 +99,10 @@
                     <b>What:</b> In this two day bootcamp, students will learn the basics of coding in Python. They will learn about algorithms, variables, conditionals, loops, and functions. The students will work on mini-projects to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
                     Lunch, snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
-                <a href="https://forms.gle/q7dMoEnRUhaihP4v5" target="_blank" class="link register">REGISTER NOW!</a>
+                <a href="https://forms.gle/q7dMoEnRUhaihP4v5" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
             </div>
         </div>
-        <div class="row main-bg">
+        <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8 program-dropdown" id="program2">
                 <div class="row">
@@ -112,9 +115,9 @@
                 </div>
             </div>
         </div>
-        <div class="row main-bg" id="program2-info">
+        <div class="row" id="program2-info">
             <div class="col-md-2"></div>
-            <div class="col-md-8 program-bg">
+            <div class="col-md-8 program-box">
                 <p class="program-title">Intro to Web Development</p>
                 <p class="program-subheading">Summer 2022</p>
                 <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
@@ -126,10 +129,10 @@
                     Snacks, t-shirts, and mini-prizes will be provided!<br>
                     A program fee of $15 is required to register.<br>
                 </p>
-                <a href="https://forms.gle/8MA8z2kTyXwdPsZbA" target="_blank" class="link register">REGISTER NOW!</a>
+                <a href="https://forms.gle/8MA8z2kTyXwdPsZbA" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
             </div>
         </div>
-        <div class="row main-bg">
+        <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8 program-dropdown" id="program3">
                 <div class="row">
@@ -142,9 +145,9 @@
                 </div>
             </div>
         </div>
-        <div class="row main-bg" id="program3-info">
+        <div class="row" id="program3-info">
             <div class="col-md-2"></div>
-            <div class="col-md-8 program-bg">
+            <div class="col-md-8 program-box">
                 <p class="program-title">Robocode Programming</p>
                 <p class="program-subheading">Summer 2022</p>
                 <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
@@ -156,10 +159,9 @@
                     Snacks, t-shirts, and mini-prizes will be provided!<br>
                     A program fee of $15 is required to register.<br>
                 </p>
-                <a href="https://forms.gle/NdWxYF8t6t9euCmX7" target="_blank" class="link register">REGISTER NOW!</a>
+                <a href="https://forms.gle/NdWxYF8t6t9euCmX7" role="button" class="btn btn-dark" id="link-btn" target="_blank">REGISTER NOW!</a>
             </div>
         </div>
-        <div class="row main-bg" id="break-pt2"></div>
 
         <!-- Contact Us -->
         <div class="row break-pt"></div>
