mission and vision styles updated

--- a/pages/mission.html
+++ b/pages/mission.html
@@ -64,36 +64,33 @@
                 OUR MISSION AND VISION
             </div>
         </div>
-        <div class="row main-bg">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <p class="about-title">About Divas in Technology</p>
-            </div>
-        </div>
-        <div class="row main-bg">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-5 box">
+                <p class="box-title">About Divas in Technology</p>
                 <p class="motto">From this stem, a flower blooms</p>
                 <p class="motto-subheading">- DTech Official Motto</p>
-                <p class="about-description">
-                    Divas in Technology (DTech) is a 501(c)(3) nonprofit organization working to expand the outreach of computer science to younger girls. By hosting programs that teach various computer science skills, we hope to increase interest in tech-related fields and increase enrollment in computer science courses in school. DTech is run by high school and college students in Wisconsin who are passionate about helping girls get access to tech opportunities and mentorship early on. Divas in Technology is focused on empowering girls in technology and changing the future.
+                <p class="box-paragraph">
+                    Divas in Technology (DTech) is a nonprofit organization working to expand the outreach of computer science to younger girls. By hosting programs that teach various computer science skills, we hope to increase interest in tech-related fields and increase enrollment in computer science courses in school. DTech is run by high school and college students in Wisconsin who are passionate about helping girls get access to tech opportunities and mentorship early on. Divas in Technology is focused on empowering girls in technology and changing the future.
                 </p>
+                <!-- 501(c)(3) NPO -->
             </div>
-            <div class="col-md-3">
-                <img src="../images/logoBlack.png" id="logo">
+            <div class="col-md-4">
+                <img src="../images/logo.png" id="logo">
+
             </div>
         </div>
-        <div class="row main-bg" style="padding-bottom: 10%;">
-            <div class="col-md-2"></div>
-            <div class="col-md-4">
-                <p class="about-title">Our Mission</p>
-                <p class="about-description">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-5 box left">
+                <p class="box-title">Our Mission</p>
+                <p class="box-paragraph">
                     DTech hosts tech-related workshops, programs, and networking opportunities for girls of all ages, ethnicities, and backgrounds.
                 </p>
             </div>
-            <div class="col-md-4">
-                <p class="about-title">Our Vision</p>
-                <p class="about-description">
+            <div class="col-md-5 box">
+                <p class="box-title">Our Vision</p>
+                <p class="box-paragraph">
                     With females making up only 23% of computer science students in Wisconsin, DTech aims to increase that number to 50% by providing resources, mentorship, and a community to young girls interested in the tech field.
                 </p>
             </div>
