board members styles updated

--- a/pages/boardMembers.html
+++ b/pages/boardMembers.html
@@ -64,79 +64,65 @@
                 BOARD MEMBERS
             </div>
         </div>
-        <div class="row main-bg">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <p class="name">Tania Mishra</p>
-            </div>
-        </div>
-        <div class="row main-bg">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <p class="position">Founder, President</p>
-                <p class="bio">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-6 box">
+                <p class="box-title">Tania Mishra</p>
+                <p class="box-subheading">Founder, President</p>
+                <p class="box-paragraph">
                     Tania Mishra will be attending college next fall, having graduated high school a semester early. Tania has been interested in technology since her first digital exploration class in 6th grade. Since then, she has been involved in multiple programs focused on empowering and inspiring girls in tech, such as ProjectCSGirls and Girls Who Code. Tania is also a 2021 National Winner and 3-times Wisconsin Affiliate winner for NCWIT's Aspirations in Computing Award. She previously interned at Northwestern Mutual in the mainframe space and on a full-stack development project. Tania wants to help lead more girls into the path of computer science, and she hopes to accomplish this through DTech!
                 </p>
-                <a href="https://www.linkedin.com/in/taniamishra127/" target="_blank" class="link">Connect with Tania on LinkedIn</a>
+                <a href="https://www.linkedin.com/in/taniamishra127/" target="_blank" role="button" class="btn btn-dark" id="link-btn">Connect with Tania on LinkedIn</a>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-1"></div>
+            <div class="col-md-3 picture-box">
                 <img src="../images/profilePics/tania.JPG" class="profile-pic">
-
             </div>
         </div>
-        <div class="row main-bg">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <p class="name">Sarah Rubenstein</p>
-            </div>
-        </div>
-        <div class="row main-bg">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <p class="position">Vice President</p>
-                <p class="bio">
+        <div class="row break-pt"></div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-6 box">
+                <p class="box-title">Sarah Rubenstein</p>
+                <p class="box-subheading">Vice President</p>
+                <p class="box-paragraph">
                     Sarah Rubenstein is a senior at Brookfield Central who is planning to major in Computer Science next year at UW Madison. She learned to love code during her four years of Girls Who Code at Marquette. For the past two years, she's been a Software Lead on her FRC robotics team. She was also an IT intern at Northwestern Mutual for around two years and will be an intern at Concurrency during the summer of 2022. Sarah enjoys teaching code to other girls so that they can create amazing projects. 
                 </p>
-                <a href="https://www.linkedin.com/in/sarah-rubenstein-b042471b1/" target="_blank" class="link">Connect with Sarah on LinkedIn</a>
+                <a href="https://www.linkedin.com/in/sarah-rubenstein-b042471b1/" target="_blank" role="button" class="btn btn-dark" id="link-btn">Connect with Sarah on LinkedIn</a>
             </div>
+            <div class="col-md-1"></div>
             <div class="col-md-3">
                 <img src="../images/profilePics/sarah.png" class="profile-pic">
             </div>
         </div>
-        <div class="row main-bg">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <p class="name">Sanjana Tarigoppula</p>
-            </div>
-        </div>
-        <div class="row main-bg">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <p class="position">Treasurer</p>
-                <p class="bio">
+        <div class="row break-pt"></div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-6 box">
+                <p class="box-title">Sanjana Tarigoppula</p>
+                <p class="box-subheading">Treasurer</p>
+                <p class="box-paragraph">
                     Sanjana Tarigoppula is a junior at the University of Wisconsin-Madison. She started coding her sophomore year of high school, and is now majoring in Computer Sciences and pursuing a certificate in Business. Sanjana is involved in coding organizations such as Coding for Good, where she is working on projects oriented around full stack development, and she will be interning at GE Healthcare this summer. Sanjana is very excited to serve on the board for Divas in Technology and increase awareness on tech careers!
                 </p>
-                <a href="https://www.linkedin.com/in/sanjanatarigoppula/" target="_blank" class="link">Connect with Sanjana on LinkedIn</a>
+                <a href="https://www.linkedin.com/in/sanjanatarigoppula/" target="_blank" role="button" class="btn btn-dark" id="link-btn">Connect with Sanjana on LinkedIn</a>
             </div>
+            <div class="col-md-1"></div>
             <div class="col-md-3">
                 <img src="../images/profilePics/sanjana.jpg" class="profile-pic">
             </div>
         </div>
-        <div class="row main-bg">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <p class="name">Alyshba Sharwani</p>
-            </div>
-        </div>
-        <div class="row main-bg" style="padding-bottom: 5%;">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <p class="position">Secretary, Designer</p>
-                <p class="bio">
+        <div class="row break-pt"></div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-6 box">
+                <p class="box-title">Alyshba Sharwani</p>
+                <p class="box-subheading">Secretary, Designer</p>
+                <p class="box-paragraph">
                     Alyshba Sharwani is a senior at Brookfield Central High School whose interests include art, reading, writing, and volunteering. Her leadership experiences includes her experience as editor and business manager of the school newspaper, secretary of a diversity and inclusivity centered school club (MSA), and former team member of a Leukemia and Lymphoma Society student fundraising team. As a designer, she is influenced by her background in art. She has taken numerous art classes, including AP Art, and has won Scholastic Awards for her work. 
                 </p>
-                <!-- <a href="#" target="_blank" class="link">Connect with Alyshba on LinkedIn</a> -->
+                <a href="https://www.linkedin.com/in/alyshba-s-387976235/" target="_blank" role="button" class="btn btn-dark" id="link-btn">Connect with Alyshba on LinkedIn</a>
             </div>
+            <div class="col-md-1"></div>
             <div class="col-md-3">
                 <img src="../images/profilePics/alyshba.jpg" class="profile-pic">
             </div>
