partners page styles updated

--- a/pages/partners.html
+++ b/pages/partners.html
@@ -64,41 +64,32 @@
                 PARTNERS
             </div>
         </div>
-        <div class="row main-bg">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <p class="name">Milwaukee School of Engineering</p>
-            </div>
-        </div>
-        <div class="row main-bg">
-            <div class="col-md-2"></div>
-            <div class="col-md-4">
-                <p class="description">
-                    The Milwaukee School of Engineering partners with DTech programs through their STEM outreach team and the We Energies STEM Center at MSOE.  Located in Milwaukee, WI, MSOE offers bachelor’s and master’s degrees in top-ranked engineering, business and nursing programs. MSOE offers year round STEM outreach programs for K-12 students and educators.
-                </p>
-                <a href="https://www.msoe.edu/" target="_blank" class="link" class="website-link">LEARN MORE ABOUT MSOE</a>
-            </div>
-            <div class="col-md-4">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-4 picture-box">
                 <img src="../images/msoe.jpg" class="picture">
             </div>
-        </div>
-        <div class="row main-bg">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <p class="name">Journey House</p>
+            <div class="col-md-6 box">
+                <p class="box-title">Milwaukee School of Engineering</p>
+                <p class="box-paragraph">
+                    The Milwaukee School of Engineering partners with DTech programs through their STEM outreach team and the We Energies STEM Center at MSOE.  Located in Milwaukee, WI, MSOE offers bachelor’s and master’s degrees in top-ranked engineering, business and nursing programs. MSOE offers year round STEM outreach programs for K-12 students and educators.
+                </p>
+                <a href="https://www.msoe.edu/" target="_blank" role="button" class="btn btn-dark" id="link-btn">Learn More About MSOE</a>
             </div>
         </div>
-        <div class="row main-bg" style="padding-bottom: 5%;">
-            <div class="col-md-2"></div>
-            <div class="col-md-4">
-                <p class="description">
+        <div class="row break-pt"></div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-4 picture-box">
+                <img src="../images/journeyHouse.jpg" class="picture">
+            </div>
+            <div class="col-md-6 box">
+                <p class="box-title">Journey House</p>
+                <p class="box-paragraph">
                     Journey House's mission is to empower families of Southside Milwaukee to move out of poverty by offering Adult Education, Youth Development, THRIVE Workforce Development, and Family Engagement.
                     Their vision is that every individual and family in Clarke Square will be given the tools and resources to succeed and contribute personally, professionally, and civically to the neighborhood and our greater Milwaukee community.
                 </p>
-                <a href="http://www.journeyhouse.org/" target="_blank" class="link" class="website-link">LEARN MORE ABOUT JOURNEY HOUSE</a>
-            </div>
-            <div class="col-md-4">
-                <img src="../images/journeyHouse.jpg" class="picture">
+                <a href="http://www.journeyhouse.org/" target="_blank" role="button" class="btn btn-dark" id="link-btn">Learn More About Journey House</a>
             </div>
         </div>
         
