volunteers page styles updated

--- a/pages/volunteers.html
+++ b/pages/volunteers.html
@@ -64,48 +64,31 @@
                 VOLUNTEERS
             </div>
         </div>
-        <div class="row main-bg">
+        <div class="row">
             <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <p id="sub-title">Meet some of DTech's volunteers!</p>
-            </div>
-        </div>
-        <div class="row main-bg">
-            <div class="col-md-3"></div>
-            <div class="col-md-2">
+            <div class="col-md-2 box">
                 <img src="../images/profilePics/harshman.png" class="picture">
                 <p class="name">Harshman Sihra</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-1"></div>
+            <div class="col-md-2 box">
                 <img src="../images/profilePics/ava.png" class="picture">
                 <p class="name">Ava Jorgensen</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-1"></div>
+            <div class="col-md-2 box">
                 <img src="../images/profilePics/bao.png" class="picture">
                 <p class="name">Bao Xiong</p>
             </div>
         </div>
-        <div class="row main-bg">
-            <div class="col-md-3"></div>
-            <div class="col-md-2">
-                <!-- <img src="../images/profilePics/tania.JPG" class="picture">
-                <p class="name">Harshman Sihra</p> -->
-            </div>
-            <div class="col-md-2">
-                <!-- <img src="../images/profilePics/tania.JPG" class="picture">
-                <p class="name">Monica Price</p> -->
-            </div>
-            <div class="col-md-2">
-                <!-- <img src="../images/profilePics/tania.JPG" class="picture">
-                <p class="name">Ava Jorgensen</p> -->
-            </div>
-        </div>
-        <div class="row main-bg">
+        <div class="row break-pt"></div>
+        <div class="row">
             <div class="col-md-2"></div>
-            <div class="col-md-8">
+            <div class="col-md-8 box">
                 <p id="special-thanks">Special thanks to Elizabeth Taylor, MSOE's Director of STEM!</p>
             </div>
         </div>
+
         
         <!-- Contact Us -->
         <div class="row break-pt"></div>
